unpackaged/main/default/objects/litify__lp_Rule_Condition__c/fields/litify__lp_Condition_Value__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Condition_Value__c</fullName>
    <label>Condition Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>