unpackaged/main/default/objects/litify__lp_Rule_Condition__c/fields/litify__lp_Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Field_Api_Name__c</fullName>
    <label>Field Api Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>