unpackaged/main/default/objects/litify__lp_Rule_Condition__c/fields/litify__lp_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Field_Type__c</fullName>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>litify__lu_Field_Display_Types</valueSetName>
    </valueSet>
</CustomField>