unpackaged/main/default/objects/litify__lp_Rule_Condition__c/fields/litify__lp_Operator__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>litify__lp_Field_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>litify__lu_Comparison_Operators</valueSetName>
    </valueSet>
</CustomField>