unpackaged/main/default/objects/litify__lp_Rule_Condition__c/fields/litify__lp_Rule__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Rule__c</fullName>
    <label>Rule</label>
    <referenceTo>litify__lp_Rule__c</referenceTo>
    <relationshipLabel>Rule Conditions</relationshipLabel>
    <relationshipName>lp_Rule_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>